--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".First"></activity>
+        <activity android:name=".First" />
+        <activity android:name=".Loss" />
+        <activity android:name=".Third" />
+        <activity android:name=".Second"></activity>
     </application>
 
 </manifest>
